# rust-tryout

./: .gitignore  Cargo.toml  README.md
adder/src/: lib.rs
adder/tests/common/: mod.rs
advanced_traits/src/: main.rs
blog/src/: lib.rs  main.rs
box_pointer/src/: main.rs
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
deref_and_drop/src/: main.rs
enums/src/: main.rs
errors/src/: main.rs
generics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
gui_lib/: Cargo.toml
gui_lib/src/: lib.rs  main.rs
interior_mutability/src/: main.rs
iterators/src/: main.rs
leetcode/src/: main.rs
lifetimes/src/: main.rs
minigrep/: Cargo.toml  poem.txt
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
passing_data/src/: main.rs
patterns/src/: main.rs
reference_cycles/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: front_of_house.rs  lib.rs
restaurant/src/front_of_house/: hosting.rs
shared_state/: Cargo.toml
shared_state/src/: main.rs
structs/src/: main.rs
traits/src/: main.rs
using_threads/src/: main.rs
variables/src/: main.rs
