[workspace]
members = ["adder", "box_pointer", "closures","collections", "deref_and_drop","enums", "errors", "generics","guessing_game", "iterators", "leetcode", "lifetimes", "minigrep", "my-project", "ownership", "restaurant", "structs", "traits", "variables"]
resolver = "2"

[package]
name = "rust-tryout"
version = "0.1.0"
edition = "2024"

[dependencies]
