[workspace]
members = ["adder", "box_pointer", "closures","collections", "deref_and_drop","enums", "errors", "generics","guessing_game", "interior_mutability", "iterators", "leetcode", "lifetimes", "minigrep", "my-project", "ownership", "reference_cycles", "restaurant", "structs", "traits", "using_threads", "variables"]
resolver = "2"

[package]
name = "rust-tryout"
version = "0.1.0"
edition = "2024"

[dependencies]
